# imgsort

./: '  .gitignore  .nvim.lua  .pre-commit-config.yaml  2q  CHANGELOG.md  README.md  README.md.backup  TODO.md  ]  argparse  base_app.py  bool_collection.py  cliff.toml  dialog_app.py  environment.yml  gui.kv  gui_app.py  image_info.py  image_num.py  image_ptr.py  main.py  option_dialog.py  pyproject.toml  requirements.txt  sort_images.py  sorted_images.py  test.py  uml.xmi  util.py  virtualenv_path.py
.github/workflows/: generate-changelog.yml  learn-github-actions.yml
docs/: class.drawio  class.drawio.html  flowchart.drawio  flowchart.drawio.html  imgsort.drawio  imgsort.html  uml.drawio  uml.drawio.html
src/: bool_collection.py  image_info.py  main.py  sort_images.py  util.py
tests/: test_util.py
