[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.mansonry.api"

[tool.poetry]
name = "imgsort"
version = "1.3.0"
description = "Sort images by size."

license = "MIT"

authors = [
  "Chun Pan Yung"
]

readme = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
Pillow = ">=9.1.1"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff-lsp = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.prod.dependencies]
pyinstaller = ">=5.13.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.git-cliff.changelog]
# Default: https://github.com/orhun/git-cliff/blob/main/config/cliff.toml
postprocessors = [
  { pattern = " +", replace = " " } # Replace multiple spaces with single space.
]
